--- a/views/index.erb
+++ b/views/index.erb
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+<meta charset="UTF-8">
+<link rel="stylesheet" type="text/css" href="styles.css">
+<link href='http://fonts.googleapis.com/css?family=Erica+One' rel='stylesheet' type='text/css'>
 	<title>BuzzBall</title>
 </head>
 <body>
-	<h1>Buzzball</h1>
-	
 	<div id="header">
-		<a href="/galleries">List of Galleries</a>
+		<h1 id="logo">Buzzball</h1>
+		<h2 id="sub">An online forum for gallery critique</h2><br>
+		<h3 id="list"><a href="/galleries">List of Galleries</a></h3>
 	</div>
-	
-	<!-- -------------------------------------------- -->
 
-	<div>
-		<h3>Add a Gallery Event:</h3>
+	<div id="form">
 		<form action="/galleries" method="POST">
-			<ul>
-		        <li><input type="text" name="name" placeholder="Gallery Name" /></li>
-		        <li><input type="text" name="event" placeholder="Event Name" /></li>
-		        <li><input type="text" name="neighborhood" placeholder="Neighborhood" /></li>
-		        <li><input type="text" name="address" placeholder="Street Address" /></li>
-		        <li><input type="text" name="opening_date" placeholder="Opening Date" /></li>
-		        <li><input type="text" name="open_thru" placeholder="Open Thru" /></li>
+			<ul id="form">
+				Add a Gallery Event:
+		        <li><input type="text" name="name" placeholder="Gallery Name" />
+		        </li>
+		        <li><input type="text" name="event" placeholder="Event Name" />
+		        </li>
+		        <li><input type="text" name="neighborhood" placeholder="Neighborhood" />
+		        </li>
+		        <li><input type="text" name="address" placeholder="Street Address" />
+		        </li>
+		        <!-- use html5 input type=date -->
+		        <li id="open">Opening Date: <br>
+		         <input type="date" name="opening_date" placeholder="Opening Date" />
+		     	</li>
+		        <li id="thru">Open Thru: <br> 
+		         <input type="date" name="open_thru" placeholder="Open Thru" />
+		     	</li>
 		    </ul>
-	        
 	        <button>Submit</button>
 	    </form>
 	</div>
-
-	<footer>"blahblaherryone'sacritiqueblahblah"</footer>
-
 </body>
