--- a/public/styles.css
+++ b/public/styles.css
@@ -1,32 +1,197 @@
-body {
-	text-align: center;
+body{
+	margin: 0;
+	padding: 0;
 	font-family: Arial;
-	text-decoration: none;
+	position: absolute;
+	width: 100%;
+	top: 0;
+	left: 0;
+	z-index: 0;
+	text-align: center;
+	min-height: 100%;
+	background-image: url('images/white_bubbles.jpg');
+	background-repeat: repeat-y;
+
 }
 
-div#subhead{
-	color: pink;
-	text-decoration: none;
+
+body div#header{
+	postion: fixed;
+	margin: 0;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	text-align: center;
+	background: rgba(210,223,213,0.5);
+	box-shadow: 0px 0px 15px rgba(0,0,0,.65);
+	color: rgba(0,0,0,.70);
+	z-index: 3;
 }
 
-ul {
+body div#header h1#logo{
+	font-family: 'Erica One', cursive;
+	color: rgba(0,0,0,0.7);
+	font-size: 60px; 
+	letter-spacing: 10px;
+	background: rgba(210,223,213,0.5);
+	height: auto;
+	padding: 0;
+	margin: 0;  
+}
+
+body div#header h2#sub{
+	background: rgba(185, 210, 192, 0.5);
+	padding: 0;
+	margin:0;
+}
+
+body div#header h3#list{
+	font-size: 20px;
+	word-spacing: 5px;
+	background: rgba(255, 255, 255, 0.5);
+	padding: 0;
+	magin:0;
+}
+
+body div#form{
+	postion: fixed;
+	margin: 0;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	text-align: center;
+	background: rgba(210,223,213,0.5);
+	box-shadow: 0px 0px 15px rgba(0,0,0,.65);
+	color: rgba(0,0,0,.70);
+	z-index: 3;
+
+}
+
+
+body div#form ul#form{
+	display: block;
+	position: relative;
+	width: 50%;
+	height: 50%;
+	background-color: rgba(174,183,177,0.5);
+	padding:10px;
+	left:22%;
+	text-align:center;
 	list-style-type: none;
 }
 
-
-
-footer {
-    width: 100%;
-        height: 80px;
-        padding: 1px;
-        -moz-border-radius: 35px;
-        border-radius: 35px;
-        background-color: Black;
-        color: #ffffff;
-        position: fixed;
-        bottom: 0;
-        text-align: center;
-        margin-left: auto;
-        margin-right: auto;
+body div#gallery_list{
+	text-align: left;
+	padding: 10px;
+	margin: 0;
+	line-height: 40px;
 }
+
+body div#gallery_head{
+	display: inline-block;
+	postion: relative;
+	padding: 0;
+	margin: 0;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	text-align: center;
+	background: rgba(210,223,213,0.5);
+	box-shadow: 0px 0px 15px rgba(0,0,0,.65);
+	color: rgba(0,0,0,.70);
+	z-index: 3;
+
+}
+
+body div#gallery_head ul#form{
+	list-style-type: none;
+}
+
+body div#gallery_head ul#form li#name{
+	font-size: 25px;
+	font-weight: bold;
+}
+
+body div#post_list{
+	postion: fixed;
+	margin: 0;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	text-align: left;
+	background: rgba(210,223,213,0.5);
+	box-shadow: 0px 0px 15px rgba(0,0,0,.65);
+	color: rgba(0,0,0,.70);
+	z-index: 3;
+
+}
+
+body div#post_list ul#form{
+	list-style-type: none;
+	padding: 1em;
+	margin: 0;
+}
+
+body div#post_list li#author{
+	font-weight: bold;
+}
+
+
+body div#comment_bars{
+	postion: block;
+	margin: 0;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-o-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	text-align: left;
+	background: rgba(210,223,213,0.5);
+	box-shadow: 0px 0px 15px rgba(0,0,0,.65);
+	color: rgba(0,0,0,.70);
+	z-index: 3;
+}
+
+body div#comment_bars ul#form{
+	list-style-type: none;
+}
+
+body div#comment_bars li#author{
+	font-weight: bold;
+}
+
+
+
 
