upvote and downvote fixed and it shows

--- a/views/galleries/show.erb
+++ b/views/galleries/show.erb
@@ -40,10 +40,14 @@
 			<button> upvote </button>
 		</form>
 
+		<%=post.upvote %>
+
 		<form action="/galleries/<%= post.id %>/downvote" method="POST">
 			<input type= "hidden" name="post[downvote]">
 			<button> downvote </button>
 		</form>
+
+		<%=post.downvote %>
 
 			</li>
 			<% end %>
